tests/ui/asm/naked-functions-testattrs.stderr
error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:12:1
   |
LL | #[test]
   | ------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:20:1
   |
LL | #[test]
   | ------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:28:1
   |
LL | #[test]
   | ------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:35:1
   |
LL | #[bench]
   | -------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0736`.
